# dac

./: .gitattributes  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  PLAN.md  README.md  dac_design_notes_requirements_spec.md  deny.toml
.github/workflows/: ci.yml
crates/dac-ai/: Cargo.toml
crates/dac-ai/src/: bundle.rs  delta.rs  error.rs  lib.rs  local.rs  prompt.rs  provider.rs  templates.rs
crates/dac-analysis/: Cargo.toml
crates/dac-analysis/src/: cfg.rs  dataflow.rs  dom.rs  lib.rs  loops.rs  ssa.rs  structuring.rs  test_support.rs  xrefs.rs
crates/dac-analysis/tests/: corpus_loops.rs  ssa_roundtrip.rs
crates/dac-api/: Cargo.toml
crates/dac-api/src/: lib.rs
crates/dac-arch/: Cargo.toml
crates/dac-arch-x86/: Cargo.toml
crates/dac-arch-x86/fuzz/: Cargo.toml
crates/dac-arch-x86/fuzz/fuzz_targets/: fuzz_x86_decode.rs
crates/dac-arch-x86/src/: decoder.rs  lib.rs  lifter.rs  registers.rs
crates/dac-arch-x86/tests/: lift_coverage.rs  text_roundtrip.rs
crates/dac-arch/src/: decoder.rs  lib.rs  lifter.rs  registers.rs
crates/dac-artifact/: Cargo.toml
crates/dac-artifact/src/: lib.rs
crates/dac-backend-c/: Cargo.toml
crates/dac-backend-c/src/: api_canonical.rs  ast.rs  compile.rs  emit.rs  lib.rs  lower.rs
crates/dac-backend-c/tests/: round_trip.rs
crates/dac-backend-cpp/: Cargo.toml
crates/dac-backend-cpp/src/: ast.rs  class_recovery.rs  compile.rs  emit.rs  lib.rs  lower.rs  mangle.rs
crates/dac-binfmt/: Cargo.toml
crates/dac-binfmt/fuzz/: Cargo.toml
crates/dac-binfmt/fuzz/fuzz_targets/: fuzz_elf_parse.rs  fuzz_pe_parse.rs
crates/dac-binfmt/src/: bridge.rs  elf.rs  lib.rs  model.rs  pe.rs  plt.rs
crates/dac-binfmt/tests/: elf.rs  pe.rs
crates/dac-cli/: Cargo.toml
crates/dac-cli/src/: annotations.rs  lift.rs  listing.rs  main.rs  manifest.rs  report.rs  xrefs.rs
crates/dac-cli/tests/: annotations_cli.rs  cfg_emit.rs  cli.rs  o0_golden.rs  o1_target_c.rs  o1_target_cpp.rs  xrefs_cli.rs
crates/dac-cli/tests/snapshots/: help.txt
crates/dac-core/: Cargo.toml
crates/dac-core/src/: confidence.rs  error.rs  evidence.rs  lib.rs  pass.rs  tracing_init.rs
crates/dac-hints/: Cargo.toml
crates/dac-hints/src/: lib.rs  parse.rs  tests.rs
crates/dac-ir/: Cargo.toml
crates/dac-ir/src/: instr.rs  lib.rs  sem.rs  ssa.rs  ty.rs
crates/dac-knowledge/: Cargo.toml
crates/dac-knowledge/src/: api.rs  canonical.rs  convention.rs  crt.rs  lib.rs
crates/dac-lift/: Cargo.toml
crates/dac-lift/src/: bridge.rs  lib.rs
crates/dac-lift/tests/: end_to_end.rs
crates/dac-plugin/: Cargo.toml
crates/dac-plugin/src/: lib.rs
crates/dac-recovery/: Cargo.toml
crates/dac-recovery/examples/: discovery_stats.rs
crates/dac-recovery/src/: convention.rs  functions.rs  idioms.rs  lib.rs  names.rs  simplify.rs  stack.rs  structs.rs  types.rs
crates/dac-recovery/tests/: function_discovery.rs
crates/dac-verify/: Cargo.toml
crates/dac-verify/src/: lib.rs  review.rs  verify.rs  world.rs
docs/: confidence-lattice.md
tests/fixtures/: README.md  cpp-hierarchy-x86_64  hello-x86_64  hello-x86_64-stripped  hello-x86_64.hints.toml  syscall-hello-x86_64
tests/golden/: README.md
tests/golden/cpp-hierarchy-o1-cpp/: listing.txt  manifest.json  source.cpp
tests/golden/hello-elf-o0/: manifest.json
tests/golden/hello-elf-o0-cfg/: cfg.dot  listing.txt  manifest.json
tests/golden/hello-elf-o0-report/: listing.txt  manifest.json  report.txt
tests/golden/hello-elf-o1-c/: listing.txt  manifest.json  source.c
tests/golden/hello-elf-o1-c-hints/: manifest.json  report.txt  source.c
tests/golden/hello-elf-stripped-o0/: listing.txt  manifest.json
tests/golden/hello-pe-o0/: listing.txt  manifest.json
tests/golden/hello-pe-o1-c/: manifest.json  source.c
tests/golden/libsample-o0/: listing.txt  manifest.json
tests/golden/sample-dll-o0/: listing.txt  manifest.json
tests/golden/syscall-hello-elf-o1-c/: listing.txt  manifest.json  source.c
xtask/: Cargo.toml
xtask/src/: golden.rs  main.rs
