[package]
name = "dac-ai"
description = "AI adapter layer and delta protocol for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dac-core = { workspace = true }

[lints]
workspace = true
