[package]
name = "dac-analysis"
description = "CFG, SSA, dataflow, and type analyses for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dac-arch = { workspace = true }
dac-binfmt = { workspace = true }
dac-core = { workspace = true }
dac-ir = { workspace = true }
dac-recovery = { workspace = true }

[dev-dependencies]
dac-arch-x86 = { workspace = true }

[lints]
workspace = true
