[package]
name = "dac-api"
description = "Public library API for embedding dac in other tools."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dac-artifact.workspace = true
dac-core.workspace = true

[lints]
workspace = true
