[package]
name = "dac-arch-x86"
description = "x86 and x86-64 architecture backend for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dac-arch = { workspace = true }
dac-ir = { workspace = true }
iced-x86 = { workspace = true }

[dev-dependencies]
dac-binfmt = { workspace = true }

[lints]
workspace = true
