[package]
name = "dac-arch"
description = "Architecture trait, registry, and shared decoder/lifter types for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dac-ir = { workspace = true }

[lints]
workspace = true
