[package]
name = "dac-backend-cpp"
description = "C++ target-language backend for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dac-binfmt.workspace = true
dac-core.workspace = true
dac-ir.workspace = true
dac-recovery.workspace = true

[lints]
workspace = true
