[package]
name = "dac-binfmt"
description = "Binary format parsing (ELF, PE, Mach-O) for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dac-core.workspace = true

[dev-dependencies]
rand.workspace = true

[lints]
workspace = true
