[package]
name = "dac-cli"
description = "Command-line frontend for dac (the `dac` binary)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "dac"
path = "src/main.rs"

[dependencies]
dac-analysis.workspace = true
dac-arch.workspace = true
dac-arch-x86.workspace = true
dac-backend-c.workspace = true
dac-backend-cpp.workspace = true
dac-binfmt.workspace = true
dac-core.workspace = true
dac-hints.workspace = true
dac-ir.workspace = true
dac-knowledge.workspace = true
dac-lift.workspace = true
dac-recovery.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
rand.workspace = true
tempfile.workspace = true

[lints]
workspace = true
