[package]
name = "dac-core"
description = "Orchestrator, pass manager, evidence graph, and confidence lattice for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true
