[package]
name = "dac-ir"
description = "Intermediate representations (Instruction, CFG, SSA, Semantic, Source) for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true
