[package]
name = "dac-knowledge"
description = "Calling conventions, standard library signatures, and pattern catalogues for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true
