[package]
name = "dac-lift"
description = "Lifting from decoded instructions to Instruction IR."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dac-analysis.workspace = true
dac-arch.workspace = true
dac-ir.workspace = true

[dev-dependencies]
dac-arch-x86.workspace = true
dac-binfmt.workspace = true
dac-core.workspace = true
dac-recovery.workspace = true

[lints]
workspace = true
