[package]
name = "dac-recovery"
description = "Function, name, struct, and idiom recovery for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dac-arch = { workspace = true }
dac-binfmt = { workspace = true }
dac-core = { workspace = true }

[dev-dependencies]
dac-arch-x86 = { workspace = true }

[lints]
workspace = true
