[package]
name = "dac-verify"
description = "IR consistency and AI-delta verification passes for dac."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dac-ai = { workspace = true }
dac-core = { workspace = true }

[lints]
workspace = true
