[package]
name = "dac-binfmt-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dac-binfmt = { path = ".." }

# Make this Cargo.toml its own workspace root so the parent dac workspace
# does not pull libfuzzer-sys (nightly-only at runtime) into stable CI
# builds. Run fuzz with `cargo +nightly fuzz run fuzz_elf_parse` from
# `crates/dac-binfmt/`.
[workspace]
members = []

[[bin]]
name = "fuzz_elf_parse"
path = "fuzz_targets/fuzz_elf_parse.rs"
test = false
doc = false
bench = false
